--- a/style.css
+++ b/style.css
@@ -1,4 +1,5 @@
-h1, h2, h3, p, li, a, {font-family:Verdana, Geneva, Tahoma, sans-serif;
+h1, h2, h3, p, li, a {
+    font-family:Verdana, Geneva, Tahoma, sans-serif;
 }
 
 h1, h2, h3 {
@@ -12,5 +13,5 @@ h1, h2, h3 {
 }
 
 .foodpic {
-    height: 100px; width: 100px;
+    height: auto; width: 300px;
 }
